Añadida la biografia

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Cristian Dominguez Salas</h1>
+    <article>
+        <h2>Mi biografia</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam atque eos unde non mollitia modi fuga, architecto ipsum natus velit doloribus. Modi iste optio ab harum maiores at ipsa voluptates?</p>
+    </article>
 </body>
 </html>
