Añadido formulario de contacto

--- a/Web/index.html
+++ b/Web/index.html
@@ -11,5 +11,8 @@
         <h2>Mi biografia</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam atque eos unde non mollitia modi fuga, architecto ipsum natus velit doloribus. Modi iste optio ab harum maiores at ipsa voluptates?</p>
     </article>
+    <article>
+        <h2>Formulario de contacto</h2>
+    </article>
 </body>
 </html>
